# Financial-_Analysis_-Pipeline

./: README.md  config.yaml.example  pyproject.toml
src/: config.py  data_fetcher.py  database.py  main.py  models.py  processor.py  signals.py
test/: test_signals.py
